Revision history for Mojolicious-Plugin-UniqueTagHelpers

0.03    22-09-2016
        Reduce memory usage.

0.02    21-09-2016
        Documentation.

0.01    21-09-2016
        First version, released on an unsuspecting world.
